--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
 MONGODB_CONNECTION_URI=mongodb+srv://satyam:Loknath2534@cluster0.9uvyt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+
+SECRET_KEY="randomcecret"
