created and tested food api end points

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_CONNECTION_URI=mongodb+srv://satyam:Loknath2534@cluster0.9uvyt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_CONNECTION_URI=mongodb+srv://satyam:Loknath2534@cluster0.9uvyt.mongodb.net/FoodAppDatabase
 
 
 SECRET_KEY="randomsecret"
