--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.2",
+    "react-router-hash-link": "^2.4.3",
+    "react-toastify": "^11.0.5",
     "router": "^2.0.0"
   },
   "devDependencies": {
